--- a/templates/pug/markup/pages/main.pug
+++ b/templates/pug/markup/pages/main.pug
@@ -1,8 +1,8 @@
-//-
+//-Главная
 extends ../layouts/default.pug
 
 block vars
-    - var title = ''
+    - var title = 'Главная'
 
 block content
     .container 123
