--- a/templates/pug/markup/pages/index.pug
+++ b/templates/pug/markup/pages/index.pug
@@ -1,27 +1,79 @@
+//-Список страниц
 doctype html
 html(class="no-js", lang="ru")
-
-    include ../components/head/head.pug
-    include ../components/example/example.pug
-    include ../components/footer/footer.pug
-
     head
-        +head(head.defaults)
-    body.page
-        |%=symbols=%
+        include ../../node_modules/bemto.pug/bemto.pug
+        title Список страниц
+        //link(href='https://fonts.googleapis.com/css?family=Scada', rel='stylesheet')
 
-        section.page__wrapper
+        style.
+            body {
+                margin: 0;
+                font-family: monospace;
+                background: #f7f7f7;
+            }
+            .container {
+                max-width: 1200px;
+                margin: 0 auto;
+            }
+            .aero-list__head {
+                background-color: #403392;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                position: relative;
+                white-space: nowrap;
+                color: #fff;
+                text-decoration: none;
+                font-size: 1.22222rem;
+                line-height: 1.4;
+            }
+            .aero-list__list {
+                list-style: none;
+                margin: 30px -15px;
+                padding: 0;
+                display: flex;
+                flex-wrap: wrap;
+            }
+            li {
+                padding: 0 15px;
+                flex: 0 0 16.666667%;
+                max-width: 16.666667%;
+                margin-bottom: 15px;
+            }
+            .aero-list__card {
+                display: flex;
+                //width: 190px;
+                height: 190px;
+                flex-direction: column;
+                border-radius: 10px;
+                font-size: 16px;
+                color: #979797;
+                text-decoration: none;
+                background: white;
+            }
+            .aero-list__card-top {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-grow: 1;
+                padding: 5px;
 
-            //- Include your components here
-            +example()
+            }
+            .aero-list__card-bottom {
+                padding: 10px;
+                border-top: 1px solid #eaeaea;
+                color: #403392;
+            }
+    +b.BODY.aero-list
+        +e.head
+            .container
+                +e.title Список страниц
+        .container
+            +e.UL.list
+              each page in __pages
+                if (page.href !== 'index.html')
+                    +e.A.card(href=page.href)
+                      +e.card-top= page.desc
+                      +e.card-bottom= page.href
 
-            .page__buffer
 
-        .page__footer
-            +footer()
-
-        script(src='%=static=%js/separate-js/svg4everybody.min.js')
-        script svg4everybody();
-
-        //- Main scripts. You can replace it, but I recommend you to leave it here
-        script(src='%=static=%js/main%=hash=%%=min=%.js')
