--- a/templates/scss/markup/static/scss/entry/main.scss
+++ b/templates/scss/markup/static/scss/entry/main.scss
@@ -1,4 +1,4 @@
-@import '../normalize.scss';
+//@import '../normalize.scss';
 
 /* Libraries, which is used in current project. */
 @import 'partials/_libraries.scss';
@@ -14,3 +14,6 @@
 
 /* Additional style files. */
 @import '../etc/etc.scss';
+
+
+
